k8s/applications/services/data/paperless/manifests/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: data
spec:
  selector:
    matchLabels:
      app: paperless
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless
    spec:
      nodeSelector:
        # The OCR is quite compute heavy, pin to HP node.
        kubernetes.io/hostname: ln-k8s-wkr-1.leachnet
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          ports:
          - containerPort: 8000
            protocol: TCP
            name: http
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
            limits:
              memory: "8Gi"
              cpu: "8"
          volumeMounts:
          - name: data
            mountPath: /usr/src/paperless/data
            subPath: "data"
          - name: data
            mountPath: /usr/src/paperless/media
            subPath: "media"
          - name: export
            mountPath: /usr/src/paperless/export
          - name: consume
            mountPath: /usr/src/paperless/consume
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          #   initialDelaySeconds: 5
          #   periodSeconds: 30
          #   timeoutSeconds: 10
          #   failureThreshold: 5
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          #   initialDelaySeconds: 5
          #   periodSeconds: 30
          #   timeoutSeconds: 10
          #   failureThreshold: 5
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: paperless-data
      - name: export
        emptyDir: 
      - name: consume
        persistentVolumeClaim:
          claimName: paperless-consume
