k8s/applications/services/data/paperless/manifests/deployment-backing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-redis
  namespace: data
spec:
  selector:
    matchLabels:
      app: paperless-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: paperless-redis
    spec:
      containers:
        - name: redis
          image: redis:6.0
          ports:
          - containerPort: 6379
            protocol: TCP
            name: redis
          resources:
            requests:
              memory: "20Mi"
              cpu: "50m"
            limits:
              memory: "50Mi"
              cpu: "150m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-tika
  namespace: data
spec:
  selector:
    matchLabels:
      app: paperless-tika
  replicas: 1
  template:
    metadata:
      labels:
        app: paperless-tika
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                  # Tika requires amd64 for some reason.
                  - amd64
      containers:
        - name: tika
          image: apache/tika:latest
          ports:
          - containerPort: 9998
            protocol: TCP
            name: tika
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "250Mi"
              cpu: "1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-gotenberg
  namespace: data
spec:
  selector:
    matchLabels:
      app: paperless-gotenberg
  replicas: 1
  template:
    metadata:
      labels:
        app: paperless-gotenberg
    spec:
      containers:
        - name: gotenberg
          image: gotenberg/gotenberg:latest
          ports:
          - containerPort: 3000
            protocol: TCP
            name: gotenberg
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "250Mi"
              cpu: "1"
