k8s/applications/services/data/paperless/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: paperless
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-nodeport
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    nodePort: 61880
    protocol: TCP
  selector:
    app: paperless
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
   - IPv4
   - IPv6
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    app: paperless-redis
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika
spec:
  ports:
  - name: gotenberg
    port: 3000
    targetPort: gotenberg
  - name: tika
    port: 9998
    targetPort: tika
  selector:
    app: paperless-tika
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg
spec:
  ports:
  - name: gotenberg
    port: 3000
    targetPort: gotenberg
  selector:
    app: paperless-gotenberg
