k8s/applications/services/data/paperless/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
    # traefik.ingress.kubernetes.io/router.middlewares: identity-system-ak-outpost-leachnet-proxy-outpost@kubernetescrd
  name: paperless-ingress
spec:
  rules:
  - host: paperless.net.theleachfamily.me.uk
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless
            port:
              name: http
  tls:
  - hosts:
    - paperless.net.theleachfamily.me.uk
    secretName: paperless-cert
